@@ -1980,6 +1980,7 @@ replace restart {
 	; peephole j29 jumped to %6 directly instead of via %5.
 } if labelIsUncondJump(), notSame(%5 %6), labelInRange(%6), labelRefCountChange(%5 -1), labelRefCountChange(%6 +1)
 
+// Neither call nor callr change the upper 8 bits of the 24-bit program counter. So replacing call (but not callf) by callr is fine.
 replace restart {
 	call	%5
 } by {
