@@ -1,3 +1,8 @@
+2024-11-06 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCralloc.hpp:
+	  Fallback to std::multimap instead of boost::container::flat_multimap for all boost up to 1.85.0.
+
 2024-11-04 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/cpp/gcc/c-family/c-ppoutput.cc:
